# easy-asphalt

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  Cargo.toml  Docker-compose.yml  Dockerfile  Dockerfile.app  Dockerfile.native  MOBILE_BUILD.md  README.md  SECURITY.md  capacitor.config.ts  compose.debug.yaml  compose.yaml  docker-compose.yml  drizzle.config.ts  easy-asphalt-wasm  github.vscode-pull-request-github-0.144.0.vsix  index.mjs  migrate-pnpm-workspace.sh  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: fortify.yml  main_easy-asphalt.yml
android/: capacitor.settings.gradle  settings.gradle
android/app/: build.gradle
app/: layout.tsx
client/: index.html  package.json
client/src/: App.tsx  const.ts  index.css  main.tsx
drizzle/: 0001_sturdy_santa_claus.sql  0002_secure_password_auth.sql  0003_contractor_quote_pricing.sql  0004_final_invoice_costs.sql  0005_remove_password_auth_columns.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
duckdns/: duck.sh
easy-asphalt/: FIXES_README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
easy-asphalt/app/: globals.css  page.tsx
easy-asphalt/drizzle/: schema.ts
patches/: wouter@3.9.0.patch
server/: auth.credentials.test.ts  auth.logout.test.ts  db.ts  package.json  routers.ts  storage.ts
shared/: geometry.ts  package.json  utils.test.ts
src/: core.rs  lib.rs  ui.rs
(+81 files in other folders)
