[package]
name = "easy-asphalt"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "easy-asphalt"
path = "rust-app/src/main.rs"

[lib]
name = "easy_asphalt"
path = "src/lib.rs"

[dependencies]
eframe = "0.31"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
